--- a/cinema/videos.html
+++ b/cinema/videos.html
@@ -25,9 +25,6 @@
             font-family: 'Space Grotesk', sans-serif;
             overflow: hidden;
             height: 100vh;
-            /* Fallback */
-            height: 100dvh;
-            /* Dynamic Height for Mobile Browsers */
             width: 100vw;
         }
 
@@ -35,20 +32,20 @@
             font-family: 'Courier Prime', monospace;
         }
 
-        /* --- CUSTOM SCROLLBARS --- */
-        /* Works on Desktop & Mobile WebKit */
+        /* Custom Scrollbar */
         ::-webkit-scrollbar {
-            width: 4px;
-            height: 4px;
+            width: 6px;
+            height: 6px;
         }
 
         ::-webkit-scrollbar-track {
             background: #0a0a0a;
+            border-left: 1px solid #222;
         }
 
         ::-webkit-scrollbar-thumb {
             background: #333;
-            border-radius: 2px;
+            border: 1px solid #000;
         }
 
         ::-webkit-scrollbar-thumb:hover {
@@ -109,63 +106,41 @@
             z-index: 50;
         }
 
-        /* Protocol Buttons (Characters) */
+        /* Protocol Buttons (Character List) */
         .protocol-btn {
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 12px;
             text-align: left;
             padding: 12px 16px;
             border-left: 2px solid transparent;
-            border-bottom: 2px solid transparent;
-            /* For mobile */
             transition: all 0.2s ease;
             opacity: 0.6;
             font-family: 'Courier Prime', monospace;
             font-size: 11px;
             letter-spacing: 1px;
             background: #080808;
-            flex-shrink: 0;
-            /* Prevent squishing on mobile */
         }
 
         .protocol-btn:hover {
             background: #111;
             opacity: 1;
+            padding-left: 20px;
         }
 
-        /* Active State */
         .protocol-btn.active {
+            border-left: 2px solid var(--neon-green);
+            background: linear-gradient(90deg, var(--neon-dim) 0%, transparent 100%);
             color: var(--neon-green);
             opacity: 1;
-            background: linear-gradient(90deg, var(--neon-dim) 0%, transparent 100%);
+            padding-left: 20px;
             text-shadow: 0 0 5px var(--neon-green);
         }
 
-        /* Desktop Active Border */
-        @media (min-width: 768px) {
-            .protocol-btn.active {
-                border-left: 2px solid var(--neon-green);
-                padding-left: 20px;
-            }
-
-            .protocol-btn:hover {
-                padding-left: 20px;
-            }
-        }
-
-        /* Mobile Active Border */
-        @media (max-width: 767px) {
-            .protocol-btn.active {
-                border-bottom: 2px solid var(--neon-green);
-                background: linear-gradient(0deg, var(--neon-dim) 0%, transparent 100%);
-            }
-        }
-
-        /* Images */
+        /* Character Images */
         .protocol-img {
-            width: 32px;
-            height: 32px;
+            width: 36px;
+            height: 36px;
             object-fit: cover;
             border-radius: 2px;
             filter: grayscale(100%);
@@ -179,7 +154,7 @@
             border-color: var(--neon-green);
         }
 
-        /* Track List Items */
+        /* Track List */
         .track-item {
             padding: 12px;
             border-bottom: 1px solid #1a1a1a;
@@ -203,7 +178,7 @@
             color: var(--neon-green);
         }
 
-        /* Controls */
+        /* Control Buttons */
         .control-btn {
             width: 45px;
             height: 45px;
@@ -227,7 +202,7 @@
             transform: scale(0.95);
         }
 
-        /* Fullscreen Mode Overrides */
+        /* Fullscreen Mode */
         body.fullscreen-mode #sidebar-left,
         body.fullscreen-mode #sidebar-right,
         body.fullscreen-mode .header-bar {
@@ -251,26 +226,130 @@
         body.fullscreen-mode #fs-exit-btn {
             display: flex;
         }
+
+        /* Mobile Optimization */
+        @media (max-width: 768px) {
+            body {
+                flex-direction: column;
+            }
+
+            /* Top Character Scroller */
+            #sidebar-left {
+                width: 100%;
+                height: auto;
+                border-right: none;
+                border-bottom: 1px solid #222;
+                flex-direction: row;
+                overflow-x: auto;
+                overflow-y: hidden;
+                padding: 0;
+                z-index: 30;
+                scrollbar-width: none;
+                /* Hide scrollbar for cleaner look */
+            }
+
+            #sidebar-left::-webkit-scrollbar {
+                display: none;
+            }
+
+            /* Hide the large "ARCHIVE" header on mobile */
+            .header-section {
+                display: none !important;
+            }
+
+            .footer-section {
+                display: none !important;
+            }
+
+            #protocol-list {
+                display: flex;
+                flex-direction: row;
+                padding: 0;
+                width: max-content;
+            }
+
+            .protocol-btn {
+                width: auto;
+                padding: 8px 12px;
+                border-left: none;
+                border-bottom: 2px solid transparent;
+                background: #000;
+                gap: 8px;
+            }
+
+            .protocol-btn .protocol-text {
+                display: none;
+            }
+
+            /* Hide text, show only icon on mobile? Optional. Keeping text for now. */
+
+            .protocol-btn.active {
+                border-left: none;
+                border-bottom: 2px solid var(--neon-green);
+                padding-left: 12px;
+                background: linear-gradient(0deg, var(--neon-dim) 0%, transparent 100%);
+            }
+
+            /* Main Content */
+            #main-container {
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+            }
+
+            /* Video Frame - Takes maximum space */
+            #video-frame {
+                flex: 1;
+                /* Fills available vertical space */
+                max-height: none;
+                width: 100%;
+            }
+
+            /* Bottom Controls */
+            .header-bar {
+                height: auto;
+                min-height: 80px;
+                padding: 12px;
+                background: #080808;
+                border-top: 1px solid #222;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            .header-bar>div {
+                width: auto;
+            }
+
+            .mobile-title-container {
+                width: 100% !important;
+                text-align: center;
+                margin-bottom: 10px;
+            }
+
+            #sidebar-right {
+                display: none;
+            }
+
+            /* Hide track list on mobile */
+        }
     </style>
 </head>
 
-<body class="flex flex-col md:flex-row h-screen bg-black text-white overflow-hidden">
+<body class="flex flex-col md:flex-row h-screen overflow-hidden bg-black text-white">
 
     <div class="scanlines"></div>
 
-    <div id="sidebar-left"
-        class="w-full md:w-64 bg-[#080808] border-r border-[#222] flex flex-row md:flex-col z-30 flex-shrink-0 h-16 md:h-auto border-b md:border-b-0 border-[#222]">
-
-        <div class="header-section p-6 border-b border-[#222] hidden md:block">
+    <div id="sidebar-left" class="w-full md:w-64 bg-[#080808] border-r border-[#222] flex flex-col z-20 flex-shrink-0">
+        <div class="header-section p-6 border-b border-[#222]">
             <h1 class="text-lg font-bold font-mono-custom text-white glitch-text" data-text="ARCHIVE">ARCHIVE</h1>
             <p class="text-[9px] text-gray-500 mt-1 font-mono-custom tracking-widest">CLEARANCE: 4</p>
         </div>
 
-        <div id="protocol-list"
-            class="flex-1 flex flex-row md:flex-col overflow-x-auto md:overflow-y-auto md:overflow-x-hidden items-center md:items-stretch scrollbar-thin">
+        <div class="flex-1 overflow-y-auto" id="protocol-list">
         </div>
 
-        <div class="footer-section p-4 border-t border-[#222] space-y-2 hidden md:block">
+        <div class="footer-section p-4 border-t border-[#222] space-y-2">
             <button onclick="shuffleGlobal()"
                 class="w-full py-2 border border-[#333] text-[10px] hover:border-green-500 hover:text-green-500 transition-colors font-mono-custom">
                 GLOBAL SHUFFLE
@@ -278,11 +357,10 @@
         </div>
     </div>
 
-    <div id="main-container" class="flex-1 flex flex-col relative min-h-0 bg-[#050505]">
+    <div id="main-container" class="flex-1 flex flex-col relative bg-[#050505]">
 
         <div id="video-frame"
             class="flex-1 relative bg-black flex items-center justify-center overflow-hidden border-b border-[#222]">
-
             <div id="youtube-player" class="w-full h-full absolute inset-0"></div>
 
             <div id="interaction-shield" class="absolute inset-0 z-50 pointer-events-auto"
@@ -295,11 +373,11 @@
         </div>
 
         <div
-            class="header-bar h-auto min-h-[80px] md:h-24 bg-[#080808] border-t border-[#222] flex flex-wrap items-center justify-between p-4 z-20 flex-shrink-0 gap-4">
+            class="header-bar h-24 bg-[#080808] border-t border-[#222] flex items-center justify-between px-6 z-20 flex-shrink-0">
 
-            <div class="w-full md:hidden text-center mb-1">
-                <div id="current-title-mobile" class="text-[10px] font-mono-custom text-green-500 truncate">INITIALIZING
-                    FEED...</div>
+            <div class="mobile-title-container md:hidden">
+                <div id="current-title-mobile" class="text-xs font-mono-custom text-green-500 truncate">INITIALIZING...
+                </div>
             </div>
 
             <div class="hidden md:block w-1/3">
@@ -307,7 +385,7 @@
                 <div id="current-title" class="text-sm font-bold truncate text-gray-300">INITIALIZING...</div>
             </div>
 
-            <div class="flex items-center gap-6 justify-center w-full md:w-auto order-last md:order-none">
+            <div class="flex items-center gap-6 justify-center w-full md:w-auto">
                 <button class="control-btn" onclick="prevTrack()" title="Previous">
                     <span class="material-symbols-outlined">skip_previous</span>
                 </button>
@@ -320,17 +398,14 @@
                 </button>
             </div>
 
-            <div
-                class="flex items-center justify-end gap-3 w-full md:w-1/3 order-2 md:order-none absolute md:relative top-2 right-2 md:top-auto md:right-auto pointer-events-none md:pointer-events-auto">
-                <div class="pointer-events-auto flex gap-2">
-                    <button
-                        class="hidden md:block text-xs font-mono-custom text-gray-500 hover:text-white px-3 py-1 border border-[#222] rounded hover:border-gray-500 transition-colors"
-                        onclick="toggleResolution()">SD/HD</button>
-                    <button class="text-gray-500 hover:text-green-500 transition-colors p-2"
-                        onclick="toggleFullscreen()" title="Maximize">
-                        <span class="material-symbols-outlined text-2xl">fullscreen</span>
-                    </button>
-                </div>
+            <div class="flex items-center justify-end gap-3 w-1/3 hidden md:flex">
+                <button
+                    class="text-xs font-mono-custom text-gray-500 hover:text-white px-3 py-1 border border-[#222] rounded hover:border-gray-500 transition-colors"
+                    onclick="toggleResolution()">SD/HD</button>
+                <button class="text-gray-500 hover:text-green-500 transition-colors p-2" onclick="toggleFullscreen()"
+                    title="Fullscreen">
+                    <span class="material-symbols-outlined text-2xl">fullscreen</span>
+                </button>
             </div>
         </div>
     </div>
@@ -345,8 +420,8 @@
     </div>
 
     <script>
-        // --- DATA ---
-        // REPLACE IMAGE URLs WITH YOUR GIT LINKS (200x200px recommended)
+        // --- CONFIGURATION ---
+        // Image Guidelines: Use 200x200px square images for best results.
         const PROTOCOLS = [
             {
                 id: 'isla', name: 'ISLA', img: 'https://github.com/NJsalubrious/pixelstortion-assets/blob/main/Isla_misc/Images/Isla_Profile.jpg?raw=true',
@@ -514,6 +589,7 @@
 
         function nextTrack() {
             const tracks = PROTOCOLS[currentProtocolIdx].tracks;
+            // Go to next track, or loop to start
             let nextIdx = (currentTrackIdx + 1) % tracks.length;
             loadTrack(nextIdx);
         }
