--- a/pixelstortion/main/index.html
+++ b/pixelstortion/main/index.html
@@ -1053,7 +1053,7 @@
                 <div class="mobile-hint text-green-500">[ TAP TO ARM ]</div>
 
                 <a href="#" class="btn-tech"
-                    onclick="event.stopPropagation(); window.top.location.href='https://jolly-disk-fe0b.joneswnathan.workers.dev/silence/'; return false;">
+                    onclick="event.stopPropagation(); window.top.location.href='https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/silence/index.html'; return false;">
                     ENTER
                 </a>
             </div>
@@ -1092,7 +1092,7 @@
                 <div class="mobile-hint text-orange-500">[ TAP TO ARM ]</div>
 
                 <a href="#" class="btn-war"
-                    onclick="event.stopPropagation(); window.top.location.href='https://jolly-disk-fe0b.joneswnathan.workers.dev/mataala/'; return false;">
+                    onclick="event.stopPropagation(); window.top.location.href='https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/mataala/index.html'; return false;">
                     ENTER
                 </a>
             </div>
