--- a/pixelstortion/main/mataala/index.html
+++ b/pixelstortion/main/mataala/index.html
@@ -4798,9 +4798,9 @@ Image Sources:
                 <span class="block text-gray-500 text-sm font-mono cursor-default">
                     → NALANI - Historical Fiction
                 </span>
-                <a href="https://jolly-disk-fe0b.joneswnathan.workers.dev/silence/"
+                <a href="https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/silence/index.html"
                     class="block text-orange-400 hover:text-orange-300 transition-colors text-sm font-mono"
-                    onclick="try { window.parent.location.href='https://jolly-disk-fe0b.joneswnathan.workers.dev/silence/'; } catch(e) { window.location.href='https://jolly-disk-fe0b.joneswnathan.workers.dev/silence/'; } event.preventDefault();">
+                    onclick="try { window.parent.location.href='https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/silence/index.html'; } catch(e) { window.location.href='https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/silence/index.html'; } event.preventDefault();">
                     → SILENCE - Crime Fiction
                 </a>
 
