--- a/pixelstortion/main/silence/index.html
+++ b/pixelstortion/main/silence/index.html
@@ -2264,17 +2264,17 @@
 
             // Protocol URL mapping
             const protocolUrls = {
-                'isla': 'https://njsalubrious.github.io/pixelstortion-assets/games/isla_protocol.html',
-                'trivia': 'https://njsalubrious.github.io/pixelstortion-assets/games/trivia_protocol.html',
-                'dom': 'https://njsalubrious.github.io/pixelstortion-assets/games/Dominics_game.html',
-                'ethel': 'https://njsalubrious.github.io/pixelstortion-assets/games/ethel_scanner.html'
+                'isla': 'https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/games/isla_protocol.html',
+                'trivia': 'https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/games/trivia_protocol.html',
+                'dom': 'https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/games/Dominics_game.html',
+                'ethel': 'https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/games/ethel_scanner.html'
             };
 
             // Protocol theme colors
             const protocolThemes = {
                 'isla': { color1: '#ff00ff', color2: '#9d00ff' },
                 'trivia': { color1: '#00ff41', color2: '#00ff00' },
-                'dominic': { color1: '#ff0055', color2: '#ff0000' },
+                'dom': { color1: '#ff0055', color2: '#ff0000' },
                 'ethel': { color1: '#00d4ff', color2: '#0088ff' }
             };
 
@@ -2368,9 +2368,9 @@
                     class="block text-green-500 hover:text-green-400 transition-colors text-sm font-mono-custom">
                     → BIO
                 </a>
-                <a href="https://jolly-disk-fe0b.joneswnathan.workers.dev/mataala/"
+                <a href="https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/mataala/index.html"
                     class="block text-green-500 hover:text-green-400 transition-colors text-sm font-mono-custom"
-                    onclick="try { window.parent.location.href='https://jolly-disk-fe0b.joneswnathan.workers.dev/mataala/'; } catch(e) { window.location.href='https://jolly-disk-fe0b.joneswnathan.workers.dev/mataala/'; } event.preventDefault();">
+                    onclick="try { window.parent.location.href='https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/mataala/index.html'; } catch(e) { window.location.href='https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/mataala/index.html'; } event.preventDefault();">
                     → NALANI - Historical Fiction
                 </a>
                 <span class="block text-gray-500 text-sm font-mono-custom cursor-default">
@@ -2475,7 +2475,7 @@
             if (playBtn) playBtn.innerText = 'play_arrow';
 
             // 4. Force Open Link (Iframe Escape Method)
-            const videoUrl = 'https://jolly-disk-fe0b.joneswnathan.workers.dev/silentcinema/';
+            const videoUrl = 'https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/silentcinema/index.html';
 
             // Create a temporary link element
             const link = document.createElement('a');
