--- a/pixelstortion/main/silence/index.html
+++ b/pixelstortion/main/silence/index.html
@@ -2264,10 +2264,10 @@
 
             // Protocol URL mapping
             const protocolUrls = {
-                'isla': 'https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/games/isla_protocol.html',
-                'trivia': 'https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/games/trivia_protocol.html',
-                'dom': 'https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/games/Dominics_game.html',
-                'ethel': 'https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/games/ethel_scanner.html'
+                'isla': 'https://raw.githack.com/NJsalubrious/pixelstortion-assets/5cbcf4d27b7c152395512698e64a7ccfcb90ce22/games/isla_protocol.html',
+                'trivia': 'https://raw.githack.com/NJsalubrious/pixelstortion-assets/5cbcf4d27b7c152395512698e64a7ccfcb90ce22/games/trivia_protocol.html',
+                'dom': 'https://raw.githack.com/NJsalubrious/pixelstortion-assets/5cbcf4d27b7c152395512698e64a7ccfcb90ce22/games/Dominics_game.html',
+                'ethel': 'https://raw.githack.com/NJsalubrious/pixelstortion-assets/5cbcf4d27b7c152395512698e64a7ccfcb90ce22/games/ethel_scanner.html'
             };
 
             // Protocol theme colors
@@ -2368,9 +2368,9 @@
                     class="block text-green-500 hover:text-green-400 transition-colors text-sm font-mono-custom">
                     → BIO
                 </a>
-                <a href="https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/mataala/index.html"
+                <a href="https://raw.githack.com/NJsalubrious/pixelstortion-assets/5cbcf4d27b7c152395512698e64a7ccfcb90ce22/pixelstortion/main/mataala/index.html"
                     class="block text-green-500 hover:text-green-400 transition-colors text-sm font-mono-custom"
-                    onclick="try { window.parent.location.href='https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/mataala/index.html'; } catch(e) { window.location.href='https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/mataala/index.html'; } event.preventDefault();">
+                    onclick="try { window.parent.location.href='https://raw.githack.com/NJsalubrious/pixelstortion-assets/5cbcf4d27b7c152395512698e64a7ccfcb90ce22/pixelstortion/main/mataala/index.html'; } catch(e) { window.location.href='https://raw.githack.com/NJsalubrious/pixelstortion-assets/5cbcf4d27b7c152395512698e64a7ccfcb90ce22/pixelstortion/main/mataala/index.html'; } event.preventDefault();">
                     → NALANI - Historical Fiction
                 </a>
                 <span class="block text-gray-500 text-sm font-mono-custom cursor-default">
@@ -2475,7 +2475,7 @@
             if (playBtn) playBtn.innerText = 'play_arrow';
 
             // 4. Force Open Link (Iframe Escape Method)
-            const videoUrl = 'https://rawcdn.githack.com/NJsalubrious/pixelstortion-assets/53944362509eeceaeee4ac115c75a4196545e6ba/pixelstortion/main/silentcinema/index.html';
+            const videoUrl = 'https://raw.githack.com/NJsalubrious/pixelstortion-assets/5cbcf4d27b7c152395512698e64a7ccfcb90ce22/pixelstortion/main/silentcinema/index.html';
 
             // Create a temporary link element
             const link = document.createElement('a');
