bug fixed "ACCESS DENIED" page.
Fix applied: Changed the button's onclick from 'dominic' to 'dom' (line 1439).

--- a/pixelstortion/main/silence/index.html
+++ b/pixelstortion/main/silence/index.html
@@ -1436,8 +1436,8 @@
             style="color: rgba(255, 157, 0, 0.7); border-color: rgb(255, 157, 0);" data-protocol="ethel">
             ETHEL
         </button>
-        <button onclick="toggleCipherGame('dominic')" class="protocol-tab"
-            style="color: rgba(0, 255, 65, 0.7); border-color: rgba(0, 255, 65, 0.3);" data-protocol="dominic">
+        <button onclick="toggleCipherGame('dom')" class="protocol-tab"
+            style="color: rgba(0, 255, 65, 0.7); border-color: rgba(0, 255, 65, 0.3);" data-protocol="dom">
             DOMINIC
         </button>
 
