--- a/pixelstortion/main/index.html
+++ b/pixelstortion/main/index.html
@@ -1053,7 +1053,7 @@
                 <div class="mobile-hint text-green-500">[ TAP TO ARM ]</div>
 
                 <a href="#" class="btn-tech"
-                    onclick="event.stopPropagation(); window.top.location.href='https://raw.githack.com/NJsalubrious/pixelstortion-assets/5cbcf4d27b7c152395512698e64a7ccfcb90ce22/pixelstortion/main/silence/index.html'; return false;">
+                    onclick="event.stopPropagation(); window.top.location.href='https://raw.githack.com/NJsalubrious/pixelstortion-assets/1cb6a3ded7e23e092360d62a59c4670c75ec2ed6/pixelstortion/main/silence/index.html; return false;">
                     ENTER
                 </a>
             </div>
