--- a/pixelstortion/main/index.html
+++ b/pixelstortion/main/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0">
 
+    <!-- Centralized URL Manifest - MUST be loaded before other scripts -->
+    <script
+        src="https://raw.githack.com/NJsalubrious/pixelstortion-assets/893672eef0e85ff0b8197f80e4387ee9ab3e71c1/pixelstortion/site-manifest.js"></script>
+
     <style>
         :root {
             --neon-green: #00ff41;
@@ -1053,7 +1057,7 @@
                 <div class="mobile-hint text-green-500">[ TAP TO ARM ]</div>
 
                 <a href="#" class="btn-tech"
-                    onclick="event.stopPropagation(); window.top.location.href='https://raw.githack.com/NJsalubrious/pixelstortion-assets/1cb6a3ded7e23e092360d62a59c4670c75ec2ed6/pixelstortion/main/silence/index.html'; return false;">
+                    onclick="event.stopPropagation(); window.top.location.href = PIXEL_MANIFEST.SILENCE; return false;">
                     ENTER
                 </a>
             </div>
@@ -1092,7 +1096,7 @@
                 <div class="mobile-hint text-orange-500">[ TAP TO ARM ]</div>
 
                 <a href="#" class="btn-war"
-                    onclick="event.stopPropagation(); window.top.location.href='https://raw.githack.com/NJsalubrious/pixelstortion-assets/1cb6a3ded7e23e092360d62a59c4670c75ec2ed6/pixelstortion/main/silence/index.html'; return false;">
+                    onclick="event.stopPropagation(); window.top.location.href = PIXEL_MANIFEST.MATAALA; return false;">
                     ENTER
                 </a>
             </div>
