--- a/pixelstortion/main/ethel_gallery/index.html
+++ b/pixelstortion/main/ethel_gallery/index.html
@@ -366,7 +366,7 @@
 
                     <!-- Lyrics View -->
                     <div id="view-lyrics" class="hidden transition-opacity duration-300">
-                        <div class="text-gray-400 font-tech text-xs md:text-sm leading-loose whitespace-pre-wrap pl-4 border-l-2 border-white/10 hover:border-current transition-colors"
+                        <div class="text-gray-400 font-tech text-xs md:text-sm leading-loose whitespace-pre-wrap text-center"
                             id="lyrics-content">
                             <!-- Injected -->
                         </div>
