silence - story tab updated

--- a/pixelstortion/main/silence/index.html
+++ b/pixelstortion/main/silence/index.html
@@ -1252,7 +1252,7 @@
                             id="nav-profiles" onclick="switchTab('profiles')">SUBJECTS</button>
                         <button
                             class="text-gray-300 hover:text-white px-3 py-2 rounded-md font-medium transition-colors"
-                            id="nav-audio" onclick="switchTab('audio')">AUDIO LOGS</button>
+                            id="nav-audio" onclick="switchTab('audio')">THE STORY</button>
                     </div>
                 </div>
                 <div class="-mr-2 flex md:hidden">
@@ -1279,7 +1279,7 @@
                 onclick="switchTab('profiles')">SUBJECTS</button>
             <button
                 class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium w-full text-left"
-                onclick="switchTab('audio')">AUDIO LOGS</button>
+                onclick="switchTab('audio')">THE STORY</button>
         </div>
     </div>
 
@@ -1350,8 +1350,9 @@
             <div class="w-full max-w-5xl">
                 <header class="mb-8 border-b border-gray-800 pb-6 flex justify-between items-center">
                     <div>
-                        <h2 class="text-4xl font-bold text-white mb-2">AUDIO INTERCEPTS</h2>
-                        <p class="font-mono-custom text-gray-500 text-sm">VOLUME 1: ORIGIN STORY</p>
+                        <h2 class="text-4xl font-bold text-white mb-2">THE STORY</h2>
+                        <p class="font-mono-custom text-gray-500 text-sm">ETHEL’S ORIGIN STORY — an ongoing visual
+                            exploration of the narrative</p>
                     </div>
                 </header>
 
